# gatling

./: .gitignore  BRANCH_STATUS.md  CLAUDE.md  Makefile  README.md  add_all_tasks.py  install_multiagent.py  launch_agent.py  pyproject.toml  ruff.toml  test.py
gatling/: .gitignore  .pre-commit-config.yaml  add_all_tasks.py  config.json  gatling_agents.sh  index.html  pyproject.toml  quickstart.py  test_topaz_import.py
gatling/.github/workflows/: ci.yml
gatling/acceptance_criteria/: encoders.json
gatling/agents/: automated_runner.py  base_agent.py  latent_substrate_agent.py  research_planner.py  subagent_manager.py
gatling/data/: metadata_20260128_123408.json
gatling/docs/: BENCHMARK_SETUP.md  CHANGELOG.md  CI_CD.md  CONTEXT_SYNTHESIS_STRATEGY.md  DATASET-CANDIDATES.md  DATASET-IMPLEMENTATION.md  DATASET-STRATEGY-REVISED.md  DATASET-WORKSTREAM.md  DG-002-HF-FULL-LLM.md  DG-002-PLAN.md  GOLD_TRACE_GENERATION.md  HOW_IT_WORKS_VISUAL.md  HUGGINGFACE_UPLOAD.md  IMPLEMENTATION-LOG.md  JEPA-DATASET-IMPLEMENTATION.md  JEPA-DATASET-RESEARCH.md  JEPA-TRAINING-STATUS.md  LAKERA_DATASET_INVESTIGATION.md  MAYOR-STATUS-2026-01-26.md  MULTI_AGENT_ARCHITECTURE.md  NEXT-TASKS-2026-01-26.md  PHASE_1B_STATUS.md  PHASE_1C_STATUS.md  PHASE_1_2_STATUS.md  PRD.md  SESSION-SUMMARY-2026-01-25.md  SESSION-SUMMARY-2026-01-26.md  STAGE_A_IMPLEMENTATION_SUMMARY.md  USAGE_GUIDE.md  WORK-DISTRIBUTION.md
gatling/scripts/: build_jepa_pretraining_dataset.py  create_and_spawn_step1.py  discover_hf_datasets.py  generate_adversarial_dataset.py  generate_tier1_dataset.py  monitor_conversations.sh  monitor_final_conversations.sh  monitor_free_loaders.sh  monitor_full_generation.sh  monitor_phase1b.sh  test_dataset_loading.py  train_execution_encoder.py  upload_to_huggingface.py
gatling/source/dataset/: README.md  __init__.py  (+4 more)
(+139 files in other folders)
